# fairing-sandbox

./: .gitignore  Cargo.toml
crates/fairing-core/: Cargo.toml
crates/fairing-core/src/models/: domains.rs  files.rs  layers.rs  mod.rs  projects.rs  queue.rs  sources.rs  uuid_v7.rs
crates/fairing-core/src/repositories/: domains.rs  files.rs  git_source.rs  layers.rs  mod.rs  projects.rs  queue.rs  sources.rs
crates/fairing-core/src/services/: auth.rs  build.rs  domains.rs  layers.rs  mod.rs  projects.rs  sources.rs  web.rs
crates/git-repositories/: Cargo.toml
crates/git-repositories/src/: lib.rs  local.rs
crates/git-repositories/src/git/: git_pack_file_reader.rs  lfs.rs  mod.rs  parsers.rs  pkt_line_reader.rs
crates/git-repositories/web-test/: index.html
crates/scylla-repositories/: Cargo.toml
crates/scylla-repositories/migrations/: 0001_initial.cql
crates/scylla-repositories/src/: domains.rs  files.rs  layers.rs  lib.rs  projects.rs  queue.rs  sources.rs  time.rs
fairing/: Cargo.toml  config.toml
fairing-acme/: Cargo.toml
fairing-acme/src/: lib.rs
fairing-core/: Cargo.toml
fairing-core/src/: lib.rs
fairing-core/src/backends/: build_queue.rs  database.rs  file_metadata.rs  file_storage.rs  mod.rs  remote_site_source.rs  remote_source.rs
fairing-core/src/models/: builds.rs  deployments.rs  domains.rs  files.rs  layers.rs  mod.rs  prelude.rs  sites.rs  sources.rs  teams.rs  trees.rs  users.rs
fairing-core/src/models/resource_name/: mod.rs  validators.rs
fairing-core/src/services/: acme.rs  build.rs  mod.rs  storage.rs
fairing-proto/: Cargo.toml  build.rs
fairing-proto/src/: lib.rs
fairing/migrations/postgres/: 0001_initial.sql  0002_modules_field.sql
fairing/src/: dns.rs  main.rs
fairing/src/backends/: mod.rs
fairing/src/backends/build_queue/: postgres.rs
fairing/src/backends/database/: mod.rs  postgres.rs
fairing/src/backends/file_metadata/: postgres.rs
fairing/src/backends/file_storage/: local.rs  mod.rs
fairing/src/backends/remote_site_source/: git.rs  mod.rs
fairing/src/backends/remote_site_source/git/: git_pack_file_reader.rs  local_pack_file_reader.rs  mod.rs  pack_file_reader.rs  parsers.rs  pkt_line_reader.rs  ssh.rs
fairing/src/backends/remote_source/: mod.rs
fairing/src/backends/remote_source/git/: lfs.rs  local_pack_file_reader.rs  mod.rs  pkt_line_reader.rs  ssh.rs
fairing/src/server/: certificate_resolver.rs  domains.rs  mod.rs  sites.rs  sources.rs  teams.rs  users.rs  web.rs
fairingctl/: Cargo.toml
fairingctl/src/: config.rs  main.rs
proto/domains/v1beta1/: domains.proto
proto/sites/v1beta1/: sites.proto
proto/sources/v1beta1/: sources.proto
proto/teams/v1beta1/: teams.proto
proto/users/v1beta1/: users.proto
