[package]
name = "fairing-acme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
http = "0.2"
p256 = { version = "0.10", features = ["jwk", "ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
