[package]
name = "fairing-core"
version = "0.1.0"
authors = ["Martin Risell Lilja <martin.risell.lilja@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argon2 = "0.2"
async-trait = "0.1"
base64 = "0.13"
blake2 = "0.9"
bytes = "1"
caseless = "0.2"
chrono = "0.4"
fairing-acme = { path = "../fairing-acme" }
fairing-proto = { path = "../fairing-proto" }
fastcdc = "1"
futures-util = "0.3"
hex = "0.4"
idna = "0.2"
lazy_static = "1"
rand = "0.8"
rcgen = "0.8"
regex = "1"
rustls-pemfile = "0.3"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5", features = ["postgres", "chrono", "macros", "runtime-tokio-rustls"] }
thrussh-keys = "0.20"
tokio = { version = "1", features = ["rt", "time"] }
tokio-util = { version = "0.6", features = ["io"] }
toml = "0.5"
tracing = "0.1"
unicode-normalization = "0.1"
unicode-script = "0.5"
url = "2"
utf8parse = "0.2"
uuid = { version = "0.8", features = ["v4", "serde"] }
x509-parser = "0.13"
wat = "1"
zstd = "0.11"
