[package]
name = "fairing-proto"
version = "0.1.0"
authors = ["Martin Risell Lilja <martin.risell.lilja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { git = "https://github.com/hyperium/tonic" }
prost = "0.7"

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic" }
