[package]
name = "fairing"
version = "0.1.0"
authors = ["Martin Risell Lilja <martin.risell.lilja@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-compression = { version = "0.3", features = ["zlib", "tokio"] }
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.13"
bincode = "1"
bytes = "1"
clap = "2"
fairing-core = { path = "../fairing-core" }
fairing-proto = { path = "../fairing-proto" }
futures = "0.3"
hex = "0.4"
http = "0.2"
http-body = "0.4.2"
hyper = "0.14"
memmap = "0.7"
miniz_oxide = "0.4"
nom = "7"
rocksdb = { version = "0.17", default-features = false }
serde = { version = "1", features = ["derive"] }
sha-1 = "0.9"
sqlx = { version = "0.5", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
thrussh = "0.32"
thrussh-keys = "0.20"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tonic = "0.6"
tonic-web = "0.2"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["v4"] }
