[package]
name = "fairing"
version = "0.1.0"
authors = ["Martin Risell Lilja <martin.risell.lilja@gmail.com>"]
edition = "2021"
description = "WebAssembly powered static sites."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-compression = { version = "0.3", features = ["zlib", "tokio"] }
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.13"
bincode = "1"
bytes = "1"
clap = { version = "3", features = ["derive"] }
console-subscriber = "0.1"
config = { version = "0.12", default-features = false, features = ["json", "toml"] }
fairing-acme = { path = "../fairing-acme" }
fairing-core = { path = "../fairing-core" }
fairing-proto = { path = "../fairing-proto" }
futures = "0.3"
hex = "0.4"
http = "0.2"
http-body = "0.4.2"
hyper = "0.14"
hyper-rustls = "0.23"
memmap = "0.7"
miniz_oxide = "0.4"
nom = "7"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
rcgen = "0.8"
rocksdb = { version = "0.17", default-features = false }
rustls = "0.20"
serde = { version = "1", features = ["derive"] }
sha-1 = "0.9"
sqlx = { version = "0.5", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
thrussh = "0.32"
thrussh-keys = "0.20"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "tracing"] }
tokio-rustls = "0.23"
tokio-stream = "0.1"
tonic = "0.6"
tonic-web = "0.2"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trust-dns-client = "0.21"
trust-dns-proto = "0.21"
trust-dns-server = "0.21"
uuid = { version = "0.8", features = ["v4"] }
zstd = "0.9"
