[package]
name = "scylla-repositories"
version = "0.1.0"
authors = ["Martin Risell Lilja <martin.risell.lilja@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
anyhow = "1"
bincode = "2.0.0-rc.1"
chrono = "0.4"
fairing-core2 = { path = "../fairing-core" }
scylla = "0.6"
uuid = "1"
